package br.com.pucgo.modelo;

public enum PedidoStatus {
    ABERTO,
    EM_APROVACAO,
    APROVADO,
    REPROVADO,
    FINALIZADO,
    CANCELADO
}

