classDiagram
%% ================== Núcleo de Pessoas/Usuários ==================
class Usuario {
  <<abstract>>
  +UUID id
  +String nome
  +String email
}

class Vendedor {
  +String matricula
}
Usuario <|-- Vendedor

class Supervisor {
  +Decimal limiteAprovacao
}
Usuario <|-- Supervisor

class Cliente {
  +String cpf
  +String nomeCompleto
  +String telefone
  +Date dataNascimento
}

class Endereco {
  +String logradouro
  +String numero
  +String complemento
  +String bairro
  +String cidade
  +String uf
  +String cep
}

Cliente "1" o-- "1..*" Endereco : agregação
%% Endereço de Cliente é reutilizável e normalizado

%% ================== Empresa / Multi-tenant ==================
class Empresa {
  +String cnpj
  +String razaoSocial
  +String nomeFantasia
}
class RegraAprovacao {
  +Decimal valorLimite
}

Empresa "1" *-- "1" Endereco : composição
Empresa "1" --> "0..*" Vendedor
Empresa "1" --> "0..*" Supervisor
Empresa "1" --> "0..*" Cliente
Empresa "1" --> "0..1" RegraAprovacao

%% ================== Catálogo de Produtos ==================
class Categoria {
  +UUID id
  +String nome
}
class Subcategoria {
  +UUID id
  +String nome
}
class Fabricante {
  +String cnpj
  +String nome
}
class Produto {
  +UUID id
  +String sku
  +String nome
  +String descricao
  +Decimal valorUnitario
  +Integer quantidadeEstoque
}

Subcategoria --> "1" Categoria
Produto --> "1" Subcategoria
Produto --> "1" Fabricante
Empresa "1" --> "0..*" Produto : catálogo por empresa

%% ================== Vendas / Pedidos ==================
class Pedido {
  +UUID id
  +Date data
  +Decimal totalBruto
  +Decimal desconto
  +Decimal totalLiquido
  +PedidoStatus status
}

class ItemPedido {
  +Integer quantidade
  +Decimal valorUnitario
  +Decimal subtotal
}

Pedido "1" *-- "1..*" ItemPedido : composição
Pedido "1" --> "1" Cliente
Pedido "1" --> "1" Vendedor : registradoPor
Pedido "1" --> "1" Empresa

%% ================== Pagamentos ==================
class FormaPagamento {
  +UUID id
  +String descricao
}
class Pagamento {
  +UUID id
  +Decimal valor
  +Date data
  +PagamentoStatus status
  +String nsu
}

Pedido "0..1" --> "1" Pagamento
Pagamento "1" --> "1" FormaPagamento

%% ================== Aprovação ==================
class AprovacaoPedido {
  +UUID id
  +Date data
  +String observacao
  +AprovacaoStatus status
}

Pedido "0..*" o-- "0..*" AprovacaoPedido : histórico
AprovacaoPedido "1" --> "1" Supervisor
Pedido ..> RegraAprovacao : "verifica limite"

%% ================== Enums ==================
class PedidoStatus {
  <<enumeration>>
  ABERTO
  EM_APROVACAO
  APROVADO
  REPROVADO
  FINALIZADO
  CANCELADO
}

class PagamentoStatus {
  <<enumeration>>
  PENDENTE
  AUTORIZADO
  NEGADO
  LIQUIDADO
}

class AprovacaoStatus {
  <<enumeration>>
  PENDENTE
  APROVADO
  REPROVADO
}
